Added gitlab link

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,8 +19,7 @@
 
 <div class="row">
 
-<span><a href="http://homepages.inf.ed.ac.uk/s1202948/"><i class="fas fa-university text-info"></i></a>     <a href="https://github.com/alexanderrobertson/"><i class="fab fa-github text-info"></i></a>     <a href="https://www.linkedin.com/in/robertsonalexander/"><i class="fab fa-linkedin text-info"></i></a>     <a href="https://twitter.com/a_d_robertson" class="icon fa-linkedin-square"><i class="fab fa-twitter text-info"></i></a></span>
-
+<span><a href="http://homepages.inf.ed.ac.uk/s1202948/"><i class="fas fa-university text-info"></i></a>     <a href="https://github.com/alexanderrobertson/"><i class="fab fa-github text-info"></i></a>     <a href="https://gitlab.com/alexanderrobertson"><i class="fab fa-gitlab text-info"></i></a>     <a href="https://www.linkedin.com/in/robertsonalexander/"><i class="fab fa-linkedin text-info"></i></a>     <a href="https://twitter.com/a_d_robertson" class="icon fa-linkedin-square"><i class="fab fa-twitter text-info"></i></a></span>
 
 </div>
 
